# GameAnalytics

./: .gitignore  README.md  README_EN.md
app/: index.html  package-lock.json  package.json
app/src/: App.tsx  i18n.ts  vite-env.d.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: ai_review.rs  analysis.rs  asset_metrics.rs  call_tree.rs  commands.rs  device_profile.rs  device_transfer.rs  lib.rs  module_analysis.rs  profiler_data_parser.rs  profiler_report.rs  profiler_session.rs  report_history.rs  unity_connection.rs  workspace.rs
app/src-tauri/src/graph/: model.rs  store.rs
app/src/api/: tauri.ts
app/src/components/: AiStatusBar.tsx  FileTree.tsx  GraphCanvas.tsx  ProgressModal.tsx  TopBar.tsx
app/src/i18n/: en.json  zh.json
app/src/pages/: ArtAssetAnalysis.tsx  ArtDashboard.tsx  ArtRedundancy.tsx  AssetGraph.tsx  CodeGraph.tsx  CodeReview.tsx  DevDashboard.tsx  DevRedundancy.tsx  DeviceProfile.tsx  Hardcode.tsx  Overview.tsx  PerformanceHub.tsx  Redundancy.tsx  RoleSelect.tsx  Settings.tsx  SuspectedRefs.tsx
app/src/store/: index.ts
app/src/styles/: global.css
app/src/utils/: deviceReportCache.ts  time.ts
unity-sdk/: CHANGELOG.md  README.md  README_EN.md  package.json
unity-sdk/Editor/: DeepProfileExporter.cs  GAProfilerEditor.cs  GameAnalytics.Profiler.Editor.asmdef
unity-sdk/Runtime/: GAProfiler.cs  GAProfilerConfig.cs  GameAnalytics.Profiler.Runtime.asmdef
unity-sdk/Runtime/Collectors/: CustomModuleCollector.cs  DeepProfileCollector.cs  DeviceMetricsCollector.cs  (+12 more)
(+37 files in other folders)
